# hccc-fastapi-sso

./: .cursorrules  .env.example  .gitignore  CHANGELOG.md  DOC.md  DOCS.md  Dockerfile  README.md  SPEC.md  alembic.ini  create_project.sh  cursor-tools.config.json  docker-compose.prod.yml  docker-compose.yml  package.json  pyproject.toml  pytest.ini
.cursor/rules/: api-layer.mdc  database.mdc  docker-deployment.mdc  environment-variables.mdc  fastapi-core.mdc  frontend-styling.mdc  global.mdc  infrastructure.mdc  init-files.mdc  middleware.mdc  schemas.mdc  security.mdc  service-layer.mdc  testing.mdc
.github/: pytest.ini
.github/workflows/: tests.yml
alembic/: env.py
app/: main.py
app/api/: router.py
app/api/v1/: __init__.py  auth.py  health.py  users.py
app/core/: config.py  hashing.py  middleware.py  security.py
app/db/: base.py
app/dependencies/: auth.py
app/models/: user.py
app/repositories/: user.py
app/schemas/: __init__.py  auth.py  base.py  health.py  user.py
app/services/: auth.py  exceptions.py  health.py  user.py
app/static/css/: custom.css
app/static/js/: main.js
app/templates/: base.html
coverage-reports/: coverage.xml
docker/scripts/: start.sh
docker/traefik/: traefik.dev.yml  traefik.prod.yml  traefik.yml
docker/traefik/dynamic/: auth.dev.yml  auth.prod.yml  security-headers.yml
local-research/: db-implementation-plan.md  docker-postgres-setup.md  fastapi-async-testing-2024.md  fastapi-sqlalchemy-2024.md  roadmap-analysis.md
scripts/: commands.md  deploy.sh  run_e2e_tests.sh
tests/: __init__.py  conftest.py
tests/api/v1/: __init__.py  conftest.py  test_health.py
tests/core/: test_config.py
tests/e2e/: conftest.py  test_health.py
tests/e2e/pages/: base_page.py
tests/repositories/: __init__.py  conftest.py  test_user.py
tests/schemas/: test_user.py
tests/services/: conftest.py  test_auth.py  test_user.py
